--- a/src/blocks/search/search.scss
+++ b/src/blocks/search/search.scss
@@ -40,26 +40,26 @@
 
 .search-form__body {
   align-items: center;
-  display:   flex;
+  display: flex;
   flex-wrap: wrap;
   width: 100%;
 }
 
 .search-form__label {
-  font-weight: bold;
+  font-weight: 700;
   padding-right: 0.5rem;
-  text-align:    left;
+  text-align: left;
 }
 
 .search-form__input {
   background-color: #f2f2f2;
-  border:     none;
+  border: none;
   box-shadow: none;
   font-family: inherit;
-  font-size:     1rem;
-  height:        2.4em;
+  font-size: 1rem;
+  height: 2.4em;
   margin-bottom: 0.7rem;
-  margin-top:    0.7rem;
+  margin-top: 0.7rem;
 }
 
 .search-form__submit {
@@ -80,27 +80,27 @@
 
 @media screen and (min-width: 35em) {
 
-    .search-form__container {
-      width: 35rem;
-    }
-    .search-form__title {
-      margin-left:  auto;
-      margin-right: auto;
-      margin-top:   0;
-      width: 35rem;
-    }
-
+  .search-form__container {
+    width: 35rem;
   }
+
+  .search-form__title {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    width: 35rem;
+  }
+}
 
 @media screen and (min-width: 30em) {
 
-    .search-form__label--size-sm {
-      flex:  1 1 24%;
-      min-width: 24%;
-    }
+  .search-form__label--size-sm {
+    flex: 1 1 24%;
+    min-width: 24%;
+  }
 
-    .search-form__input--size-sm {
-      flex:  1 1 25%;
-      min-width: 25%;
-    }
+  .search-form__input--size-sm {
+    flex: 1 1 25%;
+    min-width: 25%;
+  }
 }
