--- a/src/css/helpers.scss
+++ b/src/css/helpers.scss
@@ -5,7 +5,7 @@
 
 .row {
   display: flex;
-  flex-direction:  column;
+  flex-direction: column;
   justify-content: space-between;
 }
 
@@ -16,6 +16,7 @@
 }
 
 @media screen and (min-width: 30em) {
+
   .row {
     flex-direction: row;
   }
@@ -27,7 +28,7 @@
 
 .visually-hidden {
   font-size: 0;
-  visibility:hidden;
+  visibility: hidden;
 }
 
 .btn {
@@ -39,7 +40,7 @@
 }
 
 .logo {
-  background-image: url("../img/logo.gif");
+  background-image: url('../img/logo.gif');
   background-position: center center;
   background-size: cover;
   display: inline-block;
@@ -61,21 +62,36 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
-html, body, nav, section, footer, div, ul, li, h1, h2, h3, img {
+html,
+body,
+nav,
+section,
+footer,
+div,
+ul,
+li,
+h1,
+h2,
+h3,
+img {
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: PT Sans, Lato, Arial, sans-serif;
+  font-family: 'PT Sans', Lato, Arial, sans-serif;
   text-transform: uppercase;
 }
 
-h1, h2, p {
+h1,
+h2,
+p {
   padding-left: 1rem;
   padding-right: 1rem;
 }
@@ -83,7 +99,10 @@ h1, h2, p {
 
 @media screen and (min-width: 30em) {
 
-  h1, h2, span, p {
+  h1,
+  h2,
+  span,
+  p {
     padding-left: 0;
     padding-right: 0;
   }
@@ -92,23 +111,19 @@ h1, h2, p {
 @media screen and (min-width: 40em) {
 
   body {
-    margin-bottom: 0px;
+    margin-bottom: 0;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0px;
-    box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.3);
+    margin-top: 0;
+    box-shadow: 0 0 30 5 rgba(0, 0, 0, 0.3);
     width: 90vw;
   }
 }
 
 @media screen and (min-width: 60em) {
+
   span {
     display: block;
   }
 }
 
-root {
-  --font__header: 1.33rem;
-  --font__main:   0.9rem;
-  --color--blue: #81b3d2;
-}
