--- a/src/blocks/to-top/to-top.scss
+++ b/src/blocks/to-top/to-top.scss
@@ -1,4 +1,4 @@
-// В этом файле должны быть стили только для БЭМ-блока alert, его элементов,
+// В этом файле должны быть стили только для БЭМ-блока to-top, его элементов,
 // модификаторов, псевдоселекторов, псевдоэлементов, $media-условий...
 // Не пишите здесь другие селекторы.
 
