--- a/src/css/helpers.scss
+++ b/src/css/helpers.scss
@@ -115,7 +115,7 @@ p {
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
-    box-shadow: 0 0 30 5 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.3);
     width: 90vw;
   }
 }
