--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -9,16 +9,16 @@
 
 .footer {
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #fff;
   display: flex;
+  flex-direction: column;
   flex-wrap: nowrap;
   font-size: 1.3rem;
   font-weight: 700;
-  height: 120px;
+  height: 15rem;
   justify-content: space-around;
-  margin-top: -120px;
+  padding-top: 2.5rem;
   width: 100%;
-  z-index: 1;
 }
 
 .footer__col {
