--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -10,50 +10,45 @@
 .main {}
 
 .main__image {
-  height: 100%;
-  object-fit: cover;
   width: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 36vh;
+  min-height: 15rem;
 }
 
 .main__image--sedona-streets {
   background-image: url('../img/teaser-1.jpg');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 35vw;
-  min-height: 15rem;
 }
 
 .main__image--diablo-bridge {
   background-image: url('../img/teaser-2.jpg');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 35vw;
-  min-height: 15rem;
 }
 
 .main__header {
   margin-bottom: 0.7rem;
-  margin-left: 0.4rem;
-  margin-right: 0.4rem;
-  margin-top: 1.4rem;
-  text-align: center;
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
+  margin-top: 0.7rem;
+  // text-align: center;
 }
 
 .main__text {
   display: block;
   font-size: 0.9rem;
-  margin-bottom: 1.4rem;
-  margin-top: 0.7rem;
-  text-align: center;
+  line-height: 1.4rem;
+  margin-bottom: 0.1rem;
+  margin-top: 0.2rem;
+  padding-right: 0.5rem;
+  // text-align: center;
 }
 
 .main__sequence {
   display: block;
   font-size: 0.9rem;
   margin-bottom: 0.7rem;
-  margin-top: 0.7rem;
+  // margin-top: 0.7rem;
   text-align: center;
 }
 
