--- a/src/blocks/menu/menu.scss
+++ b/src/blocks/menu/menu.scss
@@ -8,45 +8,48 @@
 \*-------------------------------------*/
 
 .menu {
-  background-color: #FFF;
+  background-color: #fff;
   height: 56px;
   position: fixed;
   width: 100%;
-  // On Scroll animation
-  	-webkit-transition:-webkit-transform 0.3s ease-in-out;
-       -moz-transition:   -moz-transform 0.3s ease-in-out;
-        -ms-transition:    -ms-transform 0.3s ease-in-out;
-            transition:        transform 0.3s ease-in-out;
-}
+  transition: transform 0.3s ease-in-out;
 
-@media screen and (min-width: 40em) {
+  &__list {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+  }
 
-  .menu {
-    width: 90vw;
+  &__item {
+    flex: 1 1 auto;
+    font-size: 0.9rem;
+    font-weight: 700;
+    display: block;
+    list-style: none;
+    text-align: center;
+    width: 25%;
+  }
+
+  &__item:nth-of-type(2) {
+    margin-right: 5rem;
+  }
+
+  &__item:nth-of-type(3) {
+    margin-left: 5rem;
+  }
+
+  &--hidden {
+    transform: translate(0, -100%);
+    backface-visibility: hidden;
+  }
+
+  @media screen and (min-width: 25em) {
+
+    & {
+      width: 90vw;
+    }
   }
 }
 
-.menu__list {
-  align-items: center;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-}
-
-.menu__item {
-  flex: 1 1 auto;
-  font-size: 0.9rem;
-  font-weight: 700;
-  display: block;
-  list-style: none;
-  text-align: center;
-}
-
-.menu--hidden {
-   -webkit-transform: translate(0, -100%);
-   -moz-transform: translate(0, -100%);
-   -ms-transform: translate(0, -100%);
-   transform: translate(0, -100%);
-   -webkit-backface-visibility: hidden;
-}
 
