--- a/src/blocks/search/search.scss
+++ b/src/blocks/search/search.scss
@@ -8,32 +8,43 @@
 \*-------------------------------------*/
 
 .search-form {
-  margin-top: 2rem;
+  margin-top: 1.3rem;
   text-align: center;
 }
 
-.search-form__teaser {}
+.search-form__teaser {
+  margin-bottom: 1rem;
+}
+
 
 .search-form__text {
   display: block;
+  line-height: 1.6rem;
+  font-size: 0.9rem;
+  width: 90vw;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+/*
 .search-form__title {
   background-color: #766357;
   color: #fff;
   padding: 2rem;
 }
+*/
 
 .search-form__wrapper {
   background-image: url('../img/search__map.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 180px;
+  height: 21.7rem;
 }
 
 .search-form__container {
   background-color: rgba(255, 255, 255, 0.9);
+  display: none;
   margin: 0 auto;
   padding: 3rem;
 }
@@ -49,6 +60,18 @@
   font-weight: 700;
   padding-right: 0.5rem;
   text-align: left;
+}
+
+.search-form__spawn {
+  font-size: 1.2rem;
+  font-weight: 400;
+  height: 3.6rem;
+  margin-bottom: 3.1rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2.1rem;
+  text-transform: inherit;
+  width: 87vw;
 }
 
 .search-form__input {
