--- a/src/css/helpers.scss
+++ b/src/css/helpers.scss
@@ -11,11 +11,11 @@
 
 .row--gray {
   background-color: #eeeeee;
-  padding-bottom: 1.5rem;
-  padding-top: 1.5rem;
+  // padding-bottom: 1.5rem;
+  padding-top: 0.7rem;
 }
 
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 25em) {
 
   .row {
     flex-direction: row;
@@ -40,12 +40,17 @@
 }
 
 .logo {
+  --logo-width: 138px;
   background-image: url('../img/logo.gif');
   background-position: center center;
   background-size: cover;
-  display: inline-block;
+  font-size: 0;
   height: 70px;
-  width: 138px;
+  left: calc(50% - var(--logo-width)/2);
+  position: fixed;
+  top: 0;
+  width: var(--logo-width);
+  z-index: 2;
 }
 
 /*-------------------------------------*\
@@ -75,6 +80,7 @@ section,
 footer,
 div,
 ul,
+p,
 li,
 h1,
 h2,
@@ -96,8 +102,12 @@ p {
   padding-right: 1rem;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 20em) {
 
   h1,
   h2,
@@ -108,7 +118,7 @@ p {
   }
 }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 25em) {
 
   body {
     margin-bottom: 0;
