--- a/src/blocks/card/card.scss
+++ b/src/blocks/card/card.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
 }
 
-@card screen and (min-width: 30em) {
+@media screen and (min-width: 30em) {
 
   .card--direction {
     flex-direction: row;
@@ -33,7 +33,7 @@
   margin-bottom: 0.8rem;
   margin-left: auto;
   margin-right: auto;
-//  max-width: 10rem;
+  //max-width: 10rem;
   padding-left: 0.7rem;
   padding-right: 0.7rem;
   text-align: center;
