--- a/src/blocks/menu/menu.scss
+++ b/src/blocks/menu/menu.scss
@@ -14,6 +14,7 @@
   width: 100%;
   top: 0;
   transition: transform 0.3s ease-in-out;
+  visibility: hidden;
 
   &__list {
     align-items: center;
@@ -53,4 +54,50 @@
   }
 }
 
+@media screen and (min-width:40em) {
+  .menu {
+    visibility: visible;
+  }
+
+  .menu__list {
+    flex-direction: row;
+  }
+
+  .menu__item:nth-of-type(1) {
+    order: 3;
+  }
+
+  .menu__item:nth-of-type(2) {
+    order: 1;
+  }
+
+  .menu__item:nth-of-type(3) {
+    order: 2;
+  }
+}
+
+.hamburger__input:checked ~ .menu {
+  height: initial;
+  visibility: visible;
+}
+
+.hamburger__input:checked ~ .menu .menu__list {
+  flex-direction: column;
+  width: 100%;
+}
+
+.hamburger__input:checked ~ .menu .menu__item {
+  align-items: center;
+  background-color: #81b3d2;
+  box-shadow: 0 2px 1px rgba(55, 55, 55, 0.4),
+              inset 0 -2px 1px rgba(55, 55, 55, 0.3),
+              inset 0 2px 1px rgba(255, 255, 255, 0.3);
+  color: #fff;
+  display: flex;
+  height: 50px;
+  justify-content: center;
+  margin: 0;
+  outline: 1px solid rgba(55, 55, 55, 0.2);
+  width: 100%;
+}
 
