--- a/src/css/helpers.scss
+++ b/src/css/helpers.scss
@@ -39,26 +39,8 @@
   padding: 0;
 }
 
-.logo {
-  // $logo-width: 138px;
-  // --logo-width: $logo-width;
-  background-image: url('../img/logo.gif');
-  background-position: center center;
-  background-size: cover;
-  font-size: 0;
-  height: 70px;
-  // left: (50% - $logo-width) / 2;
-  // left: calc(50% - var(--logo-width) / 2);
-  left: 0;
-  margin-left: auto;
-  margin-right: auto;
-  position: fixed;
-  right: 0;
-  top: 0;
-  // width: $logo-width;
-  // width: var(--logo-width);
-  width: 138px;
-  z-index: 2;
+.hamburger__input:checked ~ .body {
+  margin-top: 150px;
 }
 
 /*-------------------------------------*\
