--- a/src/blocks/social/social.scss
+++ b/src/blocks/social/social.scss
@@ -8,43 +8,31 @@
 \*-------------------------------------*/
 
 .social {
-  background-image: url($spritesheet-image);
-  background-repeat: no-repeat;
-  width: 46px;
+  align-items: center;
+  display: flex;
+  fill: $white;
   height: 48px;
+  justify-content: center;
   margin-left: 0.2rem;
   margin-right: 0.2rem;
+  width: 46px;
 }
 
 .social__twitter {
-  background-position: 100% 0;
-  background-size: 426%;
-  // @include sprite($social-twitter);
+  height: 60%;
+  width: 60%;
+  z-index: 1;
 }
 
 .social__facebook {
-  background-position: 100% 35%;
-  background-size: 426%;
-  // @include sprite($social-facebook);
+  height: 50%;
+  width: 50%;
+  z-index: 1;
 }
 
 .social__youtube {
-  background-position: 43% 52%;
-  background-size: 426%;
-  // @include sprite($social-youtube);
+  height: 60%;
+  width: 60%;
+  z-index: 1;
 }
 
-// @media only screen and (min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi) {
-
-//   .social__twitter {
-//     @include sprite($social-twitter-2x);
-//   }
-
-//   .social__facebook {
-//     @include sprite($social-facebook-2x);
-//   }
-
-//   .social__youtube {
-//     @include sprite($social-youtube-2x);
-//   }
-// }
