--- a/src/blocks/card/card.scss
+++ b/src/blocks/card/card.scss
@@ -2,16 +2,23 @@
 // модификаторов, псевдоселекторов, псевдоэлементов, @card-условий...
 // Не пишите здесь другие селекторы.
 
+/*-------------------------------------*\
+      Card - text form
+      card.css
+\*-------------------------------------*/
+
 .card {
-  display: flex;
+  // display: flex;
   flex: 1 1 33%;
+  margin-bottom: 2rem;
+  margin-top: 1.4rem;
 }
 
 .card--direction {
   flex-direction: column;
 }
 
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 37em) {
 
   .card--direction {
     flex-direction: row;
@@ -19,18 +26,14 @@
 }
 
 .card__body {
-  display: flex;
-  flex: 1 1 33%;
-  flex-direction: column;
-  justify-content: center;
-  margin-bottom: 2.2rem;
-  margin-top: 1.4rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  // margin-bottom: 2.2rem;
+  // margin-top: 1.4rem;
+  // padding-left: 0.5rem;
+  // padding-right: 0.5rem;
 }
 
 .card__header {
-  margin-bottom: 0.8rem;
+  // margin-bottom: 0.8rem;
   margin-left: auto;
   margin-right: auto;
   //max-width: 10rem;
@@ -43,9 +46,36 @@
   display: block;
   font-size: 0.9rem;
   line-height: 1.4rem;
-  margin-top: 0.3rem;
-  padding-left: 1.2rem;
-  padding-right: 1.2rem;
+  margin-top: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   text-align: center;
 }
 
+@media screen and (min-width: 48rem) {
+
+  .card__header {
+    letter-spacing: 0.1rem;
+    line-height: 1.7rem;
+    margin-top: 2.9rem;
+    padding-left: 3.1rem;
+    padding-right: 3.1rem;
+  }
+
+  .card__text {
+    margin-top: 1.3rem;
+    padding-left: 2.3rem;
+    padding-right: 2.3rem;
+  }
+}
+
+@media screen and (min-width: 80rem) {
+
+  .card__header {
+    letter-spacing: 0.1rem;
+    line-height: 1.7rem;
+    margin-top: 0.9rem;
+    padding-left: 8.1rem;
+    padding-right: 8.1rem;
+  }
+}
