--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -3,10 +3,23 @@
 // Не пишите здесь другие селекторы.
 
 .logo {
-  background-image: url('../img/logo.gif');
-  background-position: center center;
-  background-size: cover;
+  // background-image: url('../img/logo.gif');
+  // background-position: center center;
+  // background-size: cover;
   font-size: 0;
+  height: 56px;
+  left: 0;
+  margin-left: auto;
+  margin-right: auto;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 67px;
+  z-index: 2;
+}
+
+.logo__background {
+  fill: #81b3d2;
   height: 70px;
   left: 0;
   margin-left: auto;
@@ -15,9 +28,10 @@
   right: 0;
   top: 0;
   width: 138px;
-  z-index: 2;
+  z-index: 1;
 }
 
+.hamburger__input:checked ~ .logo__background,
 .hamburger__input:checked ~ .logo {
   display: none;
 }
