--- a/src/blocks/media/media.scss
+++ b/src/blocks/media/media.scss
@@ -12,27 +12,17 @@
   flex: 1 1 33%;
 }
 
-// .media--vertical {
-//   flex-direction: column;
-// }
-
 .media--direction {
   flex-direction: column;
 }
 
-@media screen and (min-width: 30em) {
-
-  .media--direction {
-    flex-direction: row;
-  }
-}
-
 .media__body {
-  display: flex;
-  flex: 1 1 33%;
-  flex-direction: column;
-  justify-content: center;
-  padding-bottom: 1.1rem;
+  // display: flex;
+  flex: 1 1 auto;
+  height: 13rem;
+  // flex-direction: column;
+  // justify-content: center;
+  // padding-bottom: 1.1rem;
   padding-left: 0.7rem;
   padding-right: 0.3rem;
 
@@ -47,19 +37,23 @@
     z-index: -1;
   }
 
-  &--upper-indent-small {
+  &--indent-small {
     padding-top: 1.1rem;
+    margin-bottom: -1rem;
   }
 }
 
 .media__object {
   display: flex;
-  justify-content: center;
-  //flex: 2 2 67%;
+  justify-content: flex-start;
+  flex: 1 1 auto;
 }
 
 .media__header {
-  margin-bottom: 0.8rem;
+  display: block;
+  // margin-bottom: 0.8rem;
+  font-size: 1.1rem;
+  font-weight: 400;
   margin-left: auto;
   margin-right: auto;
   margin-top: 1.4rem;
@@ -72,11 +66,120 @@
 .media__text {
   display: block;
   font-size: 0.9rem;
-  line-height: 1.4rem;
-  margin-bottom: 1.4rem;
-  margin-top: 0.3rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  line-height: 1.35rem;
+  // margin-bottom: 1.4rem;
+  margin-top: 0.9rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   text-align: center;
 }
 
+@media screen and (min-width: 48em) {
+
+  .media--direction {
+    flex-direction: row;
+  }
+
+  .media__object {
+    justify-content: center;
+    flex: 1 1 66.3%;
+  }
+
+  .media__body {
+    flex: 1 1 33%;
+    height: 100%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    text-align: center;
+  }
+
+  .media__body--upper-indent-big {
+    margin-top: 0;
+    padding-top: 0;
+  }
+
+  .media__body--indent-small {
+    margin-top: 0;
+    padding-top: 0;
+  }
+
+  .media__header {
+    letter-spacing: 0.11rem;
+    line-height: 1.7rem;
+    margin-top: 2.8rem;
+    padding-left: 2.7rem;
+    padding-right: 2.6rem;
+  }
+
+  .media__text {
+    line-height: 1.35rem;
+    margin-top: 1.5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    // margin-bottom: 1.5rem;
+  }
+
+  .offer .media:nth-of-type(2) {
+    order: 3;
+  }
+
+  .offer .media:nth-of-type(3) {
+    order: 2;
+  }
+
+  .media--order .media__body {
+    order: 1;
+  }
+
+  .media--order .media__object {
+    order: 0;
+  }
+}
+
+@media screen and (min-width: 80rem) {
+
+  .media__body {
+    flex: 1 1 33%;
+    height: 100%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    text-align: center;
+  }
+
+  .media__header {
+    letter-spacing: 0.1rem;
+    line-height: 1.7rem;
+    margin-top: 3.2rem;
+    padding-left: 5.7rem;
+    padding-right: 5.7rem;
+  }
+
+  .media__text {
+    line-height: 1.35rem;
+    margin-top: 1.5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    // margin-bottom: 1.5rem;
+  }
+
+  // .offer .media:nth-of-type(2) {
+  //   order: 3;
+  // }
+
+  // .offer .media:nth-of-type(3) {
+  //   order: 2;
+  // }
+
+  // .media--order .media__body {
+  //   order: 1;
+  // }
+
+  .media--order .media__object {
+    order: 0;
+  }
+
+  .media__body--indent-small {
+    margin-top: 0;
+    padding-top: 0;
+  }
+}
