--- a/src/blocks/menu/menu.scss
+++ b/src/blocks/menu/menu.scss
@@ -46,15 +46,16 @@
     backface-visibility: hidden;
   }
 
-  @media screen and (min-width: 25em) {
+  @media screen and (min-width: 48.01rem) {
 
     & {
-      width: 90vw;
+      width: 94vw;
     }
   }
 }
 
-@media screen and (min-width:40em) {
+@media screen and (min-width: 40rem) {
+
   .menu {
     visibility: visible;
   }
@@ -64,15 +65,34 @@
   }
 
   .menu__item:nth-of-type(1) {
-    order: 3;
+    margin-left: 5rem;
+    order: 2;
   }
 
   .menu__item:nth-of-type(2) {
-    order: 1;
+    margin-right: 0;
+    order: 0;
   }
 
   .menu__item:nth-of-type(3) {
-    order: 2;
+    margin-left: 0;
+    margin-right: 5rem;
+    order: 1;
+  }
+
+  .menu__item:nth-of-type(4) {
+    order: 3;
+  }
+}
+
+@media screen and (min-width: 80rem) {
+
+  .menu__item:nth-of-type(1) {
+    margin-left: 7.5rem;
+  }
+
+  .menu__item:nth-of-type(3) {
+    margin-right: 7.5rem;
   }
 }
 
@@ -89,9 +109,7 @@
 .hamburger__input:checked ~ .menu .menu__item {
   align-items: center;
   background-color: #81b3d2;
-  box-shadow: 0 2px 1px rgba(55, 55, 55, 0.4),
-              inset 0 -2px 1px rgba(55, 55, 55, 0.3),
-              inset 0 2px 1px rgba(255, 255, 255, 0.3);
+  box-shadow: 0 2px 1px rgba(55, 55, 55, 0.4), inset 0 -2px 1px rgba(55, 55, 55, 0.3), inset 0 2px 1px rgba(255, 255, 255, 0.3);
   color: #fff;
   display: flex;
   height: 50px;
