--- a/src/blocks/search/search.scss
+++ b/src/blocks/search/search.scss
@@ -8,13 +8,13 @@
 \*-------------------------------------*/
 
 .search-form {
-  margin-top: 1.3rem;
+  // margin-top: 1.3rem;
   text-align: center;
 }
 
 .search-form__teaser {
   font-size: 1.3rem;
-  margin-bottom: 1.2rem;
+  margin-top: 1.4rem;
 }
 
 
@@ -25,6 +25,7 @@
   width: 90vw;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 1.3rem;
 }
 
 /*
@@ -131,5 +132,38 @@
   .search-form__input--size-sm {
     flex: 1 1 25%;
     min-width: 25%;
+  }
+}
+
+
+@media screen and (min-width: 48rem) {
+
+  .search-form__teaser {
+    font-size: 1.9rem;
+    margin-top: 3.4rem;
+  }
+
+  .search-form__text {
+    margin-top: 1.6rem;
+    width: 55vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .search-form__spawn {
+    width: 60vw;
+  }
+
+  .search-form__map {
+    height: 22.8rem;
+  }
+}
+
+@media screen and (min-width: 80rem) {
+
+  .search-form__spawn {
+    margin-bottom: 4.2rem;
+    margin-top: 2.7rem;
+    width: 36vw;
   }
 }
