--- a/src/blocks/teaser/teaser.scss
+++ b/src/blocks/teaser/teaser.scss
@@ -14,7 +14,7 @@
   margin-top: 2.3rem;
   padding-bottom: 2.4rem;
   text-align: center;
-  z-index: 1;
+  // z-index: 1;
 
   &__header {
     font-size: 1.1rem;
@@ -26,10 +26,31 @@
   &__text {
     display: block;
     font-size: 0.9rem;
-    line-height: 1.8rem;
+    line-height: 1.7rem;
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 1.8rem;
     text-align: center;
+  }
+}
+
+@media screen and (min-width: 48rem) {
+
+  .teaser {
+    background-image: none;
+    margin-top: 3.5rem;
+    padding-bottom: 3rem;
+
+    &__header {
+      font-size: 1.3rem;
+      line-height: 1.7rem;
+      padding-left: 8rem;
+      padding-right: 8rem;
+    }
+
+    &__text {
+      font-size: 0.9rem;
+      padding-top: 1.6rem;
+    }
   }
 }
