--- a/src/blocks/media/media.scss
+++ b/src/blocks/media/media.scss
@@ -27,8 +27,8 @@
   padding-right: 0.3rem;
 
   &--color-blue {
-    background: #81b3d2;
-    color: #fff;
+    background: $color-main;
+    color: $white;
   }
 
   &--upper-indent-big {
