--- a/src/blocks/row/row.scss
+++ b/src/blocks/row/row.scss
@@ -13,8 +13,7 @@
 }
 
 .row--gray {
-  background-color: #eeeeee;
-  // padding-bottom: 1.5rem;
+  background-color: $gray-lighter;
   padding-top: 0.5rem;
 }
 
