--- a/src/blocks/teaser/teaser.scss
+++ b/src/blocks/teaser/teaser.scss
@@ -34,6 +34,13 @@
   }
 }
 
+@media screen and (min-width: 21.25rem) {
+
+  .teaser {
+    background-image: none;
+  }
+}
+
 @media screen and (min-width: 48rem) {
 
   .teaser {
