--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -6,12 +6,13 @@ $gray-darker:                 hsl(0, 0%, 20%);
 $gray-darken:                 hsl(0, 0%, 30%);
 $gray-dark:                   hsl(0, 0%, 40%);
 $gray:                        hsl(0, 0%, 50%);
-$gray-light:                  hsl(0, 0%, 60%);
+$gray-light:                  hsl(0, 0%, 80%);
 $gray-lighten:                hsl(0, 0%, 85%);
 $gray-lighter:                hsl(0, 0%, 90%);
 $gray-lightest:               hsl(0, 0%, 95%);
 $white:                       hsl(0, 0%, 100%);
-
+$color-main--lightest:        hsl(203, 59%, 92%);
+$color-main--lighter:         hsl(204, 46%, 77%);
 $color-main:                  hsl(203, 47%, 66%);
 $color-main--darker:          hsl(203, 42%, 58%);
 $color-main--darkest:         hsl(202, 44%, 54%);
@@ -19,8 +20,9 @@ $color-success:               hsl(120, 39%, 54%);
 $color-danger:                hsl(2, 64%, 58%);
 $color-warning:               hsl(35, 84%, 62%);
 
-
-
+$color-grey-red--lighter:     hsl(30, 7%, 89%);
+$color-grey-red:              hsl(23, 15%, 40%);
+$color-grey-red--darker:      hsl(23, 18%, 32%);
 // Семантические цвета
 
 $text-color:                  $gray-darkest;
