--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -9,7 +9,7 @@
 
 .footer {
   align-items: center;
-  background-color: #fff;
+  background-color: $white;
   display: flex;
   flex-wrap: nowrap;
   font-size: 1.3rem;
