--- a/src/blocks/row/row.scss
+++ b/src/blocks/row/row.scss
@@ -10,24 +10,53 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  &__header {
+    display: block;
+    font-size: 1.125rem;
+    font-weight: 700;
+    padding-left: 0.7rem;
+    padding-right: 0.7rem;
+    text-align: center;
+  }
+
+  &--indent {
+    padding-bottom: 1.5rem;
+    padding-top: 1.5rem;
+  }
+
+  &--border {
+    border-top: 2px;
+    border-top-color: $gray-lightest;
+    border-top-style: solid;
+  }
+
+  &--gray {
+    background-color: $gray-lighter;
+    padding-top: 0.5rem;
+  }
+
+  &--inner {
+    flex: 0 0 33%;
+  }
 }
 
-.row--gray {
-  background-color: $gray-lighter;
-  padding-top: 0.5rem;
-}
 
 @media screen and (min-width: 37em) {
 
   .row {
     flex-direction: row;
-  }
 
-  .row--vertical {
-    flex-direction: column;
-  }
+    &--vertical {
+      flex-direction: column;
+    }
 
-  .row--gray {
-    min-height: 16rem;
+    &--direction {
+      flex-direction: column;
+    }
+
+    &--gray {
+      min-height: 16rem;
+    }
   }
 }
