--- a/src/scss/mixins/grid-mixins.scss
+++ b/src/scss/mixins/grid-mixins.scss
@@ -1,4 +1,4 @@
-$screen-xs:                   0 !default;
+$screen-xs:                   320px !default;
 $screen-sm:                   480px !default;
 $screen-md:                   768px !default;
 $screen-lg:                   992px !default;
